[project]
name = "lunis-creations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pelican-image-process>=3.1.0",
    "pelican[markdown]>=4.11.0",
]

[dependency-groups]
dev = [
    "invoke>=2.2.0",
    "livereload>=2.7.1",
]
